# free-tms

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001a10755395_add_recruitment_fields_to_project_model.py  1b9203dae8a3_initial_migration.py  293bb114fa17_add_project_projectmember_and_enhance_.py
backend/app/api/: api_v1.py  deps.py
backend/app/api/routes/: auth.py  clients.py  employees.py  projects.py  skills.py
backend/app/core/: config.py
backend/app/models/: __init__.py  client.py  email_template.py  employee.py  job.py  project.py  skill.py
backend/app/schemas/: client.py  employee.py  project.py  skill.py
backend/app/services/: matching_service.py
backend/scripts/: create_test_user.py  seed_skills.py
backend/tests/: conftest.py  test_auth.py  test_clients.py  test_employees.py  test_matching.py  test_projects.py  test_skills.py
docs/: system-architecture.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.test.tsx  Layout.tsx  PrivateRoute.tsx
frontend/src/lib/: axios.test.ts  axios.ts
frontend/src/pages/: Clients.test.tsx  Clients.tsx  Dashboard.tsx  EmployeeProfile.test.tsx  EmployeeProfile.tsx  Employees.test.tsx  Employees.tsx  Login.test.tsx  Login.tsx  ProjectDetail.test.tsx  ProjectDetail.tsx  ProjectForm.test.tsx  ProjectForm.tsx  ProjectMatching.tsx  Projects.test.tsx  Projects.tsx  Skills.test.tsx  Skills.tsx
(+4 files in other folders)
